--- a/styles/css/vtex.product-price.css
+++ b/styles/css/vtex.product-price.css
@@ -1,7 +1,10 @@
 .listPrice {
-  color: #727273;
+  color: rgba(0,0,0,.8);
   margin-bottom: .25rem;
   font-size: 1rem;
+}
+.listPrice .currencyContainer {
+  margin-left: 1.2rem;
 }
 
 .sellingPrice {
