--- a/styles/css/vtex.product-summary.css
+++ b/styles/css/vtex.product-summary.css
@@ -70,3 +70,20 @@
 .image {
   border-radius: 0.25rem;
 }
+
+/* Boton de la vitrina de producto version desktop */
+.containerNormal .element :global(.vtex-button){
+  background: none;
+  border: 1px solid #7300e0;
+  border-radius: 5px;
+  font-size: 13px;
+  color: #7300e0;
+  letter-spacing: .5px;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.containerNormal .element :global(.vtex-button):hover{
+  background: #7300e0;
+    color: #fff;
+}
