--- a/styles/css/vtex.tab-layout.css
+++ b/styles/css/vtex.tab-layout.css
@@ -5,8 +5,37 @@
     margin: 0 auto;
 }
 
+
 .listContainer--mas-informacion-titles .listItemActive{
     border-bottom: 4px solid #7300e0;
+}
+.listContainer--mas-informacion-titles .listItem{
+    margin-bottom: 0px;
+}
+
+.listContainer--mas-informacion-titles{
+    border-bottom: 1px solid #d7d7d7;
+}
+
+.listContainer--mas-informacion-titles .contentContainer .contentItem{
+    width: 64rem;
+    margin: auto;
+}
+
+.listContainer--mas-informacion-titles :global(.vtex-button){
+    outline: 0;
+    background: none;
+    border:none;
+    padding: 5px 30px;
+    text-transform: capitalize;
+    font-family:Circular Pro Bold,sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 23px;
+    text-align: center;
+    color: #7300e0;
+    margin: 0;
 }
 
 
