--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -165,3 +165,10 @@ content:" en "
   color: #7300e0;
   display: block;
 }
+/* el boton de ver más  */
+.showMoreButton{
+    background: none;
+    border: 1px solid #7300e0;
+    border-radius: 5px;
+    color: #7300e0;
+}
